# kuber-coin

./: .dockerignore  .env.edge.example  .env.example  .env.production.example  .env.testnet.example  .gitattributes  .gitignore  .markdownlint.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.multiarch  Dockerfile.simple  Dockerfile.web  LICENSE  README.md  ROADMAP.md  SECURITY.md  WHITEPAPER.md  azure.yaml  coverage.ps1  deny.toml  docker-build-simple.ps1  docker-compose.edge.yml  docker-compose.prod.yml  docker-compose.seed.yml  docker-compose.testnet.yml  docker-compose.yml  justfile  kubercoin.conf.example  kubercoin.sln  miner.py  start.ps1  start.sh  test-complete.ps1  test.ps1  upgrade.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-native-ui.yml  ci.yml  coverage.yml  e2e.yml  fuzz.yml  release.yml  security-audit.yml
apps/native/mining-ui/: BUILD.md  README.md
apps/native/mining-ui/linux-gtk4/: Cargo.toml  README.md
apps/native/mining-ui/linux-gtk4/src/: alerts.rs  charts.rs  dashboard.rs  devices.rs  main.rs  models.rs  overclocking.rs  pools.rs  services.rs
apps/sdk/: README.md
apps/sdk/examples/: CURL_CHEATSHEET.md
apps/tests/e2e/: README.md  package-lock.json  package.json  playwright.config.ts  setup-test-data.ps1  tsconfig.json
apps/web/dapp/: next.config.js  package-lock.json  package.json
apps/web/docs/: next.config.js  package-lock.json  package.json
chain/: Dockerfile  go.mod
core/core/chain/: Cargo.toml
core/core/chain/benches/: chain_bench.rs
core/core/chain/src/: block.rs  compact_blocks.rs  error.rs  header.rs  lib.rs  performance.rs  utxo.rs  utxo_db.rs
core/core/consensus/: Cargo.toml
core/core/consensus/src/: checkpoints.rs  difficulty.rs  lib.rs  params.rs  pow.rs  sig_cache.rs  validator.rs  version_bits.rs
core/core/storage/: Cargo.toml
core/core/storage/src/: lib.rs  rocksdb_backend.rs
core/core/testnet/: Cargo.toml
core/core/testnet/src/: lib.rs
core/core/tx/: Cargo.toml
core/core/tx/src/: address.rs  bech32m.rs  bip322.rs  bip39.rs  bip44.rs  bip84.rs  bip86.rs  coin_select.rs  descriptors.rs  error.rs  hd_wallet.rs  input.rs  keys.rs  lib.rs  miniscript.rs  multisig.rs  musig2.rs  opcodes.rs  outpoint.rs  output.rs  p2sh.rs  psbt.rs  psbt_v2.rs  schnorr.rs  script.rs  script_interpreter.rs  segwit.rs  taproot.rs  tapscript.rs  timelock.rs  wallet.rs  wallet_crypto.rs
core/mining/miner/: Cargo.toml  README.md
core/mining/miner/src/: main.rs
core/node/: Cargo.toml
core/node/src/: config.rs  lib.rs  main.rs  mempool.rs  notifications.rs  rpc.rs  rpc_chain.rs  rpc_mining.rs  rpc_network.rs  rpc_wallet.rs  state.rs  stratum.rs
core/node/src/network/: message.rs  mod.rs  peer.rs  server.rs  upnp.rs  v2_transport.rs
core/services/eip_signing/: Cargo.toml
core/services/eip_signing/src/: eip191.rs  eip712.rs  eth_address.rs  lib.rs
core/services/faucet/: Cargo.toml
core/services/faucet/src/: lib.rs  main.rs
core/services/lightning/: Cargo.toml
core/services/lightning/src/: backup.rs  channel.rs  channel_manager.rs  dual_funding.rs  funding.rs  gossip.rs  htlc.rs  invoice.rs  lib.rs  liquidity.rs  messages.rs  onion.rs  persistence.rs  routing.rs  watchtower.rs
core/tests/: adversarial_tests.rs
core/tests/fuzz/: Cargo.toml
core/tests/fuzz/fuzz_targets/: fuzz_address.rs  fuzz_bech32m.rs  fuzz_block.rs  fuzz_descriptor.rs  fuzz_difficulty.rs  fuzz_hd_wallet.rs  fuzz_p2p_message.rs  fuzz_psbt.rs  fuzz_psbt_deserialize.rs  fuzz_rpc_json.rs  fuzz_script.rs  fuzz_stratum.rs  fuzz_transaction.rs  fuzz_utxo_decompress.rs
docs/: API_ACTUAL.md  API_DOCUMENTATION.md  ARCHITECTURE.md  ATOMIC_SWAPS.md  CHANGELOG.md  CLI_REFERENCE.md  CODE_OF_CONDUCT.md  COINJOIN_DESIGN.md  COLD_STORAGE_GUIDE.md  COMPATIBILITY_STANDARDS.md  CONSENSUS.md  CONSENSUS_FREEZE.md  CONTRIBUTING.md  COVERAGE.md  DEPLOYMENT_GUIDE.md  DISASTER_RECOVERY_GUIDE.md  DNS_SETUP.md  DOCKER_README.md  E2E_COIN_WORKFLOW.md  ETHEREUM_INTEROP.md  FAQ.md  FUZZING.md  GETTING_STARTED.md  GITHUB_ACTIONS_LOCAL.md  GITHUB_ACTIONS_MATRIX.md  GOVERNANCE.md  GRANT_READINESS.md  INCIDENT_RESPONSE.md  INSTALL_DOTNET.md  KUBER-ECONOMICS-DEEP.md  KUBER-SECURITY-MODEL.md  KVM-OPCODES.md  LAUNCH_CHECKLIST.md  LEGAL_BOUNDARIES.md  MAINNET_POLICY.md  MEMPOOL_AND_RELAY_POLICY.md  MINING_GUIDE.md  MULTINODE_TESTING.md  NETWORK-DIAGRAMS.md  OPEN_SOURCE_BOUNDARY.md  (+40 more)
infra/azure/: README.md  cloud-init-monitoring.sh  cloud-init.sh  fix_seed1.sh  fix_seed2.sh  main.bicep  main.bicepparam  main.json
infra/caddy/: Caddyfile
infra/deploy/: kubercoin.service
infra/docker/: entrypoint.sh
infra/k8s/: README.md  alerts.yaml  deployment.yaml  ingress.yaml  monitoring.yaml
infra/monitoring/: alerts.yml  prometheus-testnet.yml  prometheus.yml
nft-mint/: index.js  package.json
specs/: README.md  consensus.cfg  consensus.tla
test-vectors/: BLOCK-HEADER-TV.md  CONSENSUS-TV.md  HASHING-TV.md  KVM-OPCODES-TV.md  MINTPROOF-TV.md  P2P-TV.md  README.md  SIGNATURE-TV.md  STATE-ROOT-TV.md
tools/: e2e-debug.ps1  tx_explorer.rs
tools/scripts/: MINING.md  all_sweep.ps1  audit_protocol_api_usage.ps1  audit_protocol_consumers.ps1  audit_web_ui_coupling.ps1  backup.sh  build-multiarch.sh  build_all_native_ui.ps1  build_native_ui_linux.sh  build_native_ui_macos.sh  build_native_ui_windows.ps1  ci_convergence.ps1  ci_coverage.ps1  ci_doc.ps1  ci_git_hygiene.ps1  ci_msrv.ps1  ci_native_ui_all.ps1  ci_native_ui_linux_wsl.ps1  ci_native_ui_windows.ps1  ci_sdk_js.ps1  ci_security.ps1  cli_json_smoke.ps1  common_build.ps1  demo_mining_ui.ps1  demo_ui_simple.ps1  deploy-aws.sh  deploy-azure.sh  deploy-gcp.sh  deploy-seed-node.sh  deploy.ps1  e2e_extended.ps1  e2e_full.ps1  e2e_full_stress.ps1  e2e_live.ps1  e2e_smoke.ps1  fuzz_smoke_all.ps1  fuzz_smoke_all.sh  genesis_ceremony.ps1  genesis_ceremony.sh  github_actions_local.ps1  (+15 more)
tools/test-console/: Program.cs  test-console.csproj
tools/tx-sender/: Cargo.toml  main.rs
wallet-ui/: package.json
wallet-ui/src/: App.js
(+631 files in other folders)
