[package]
name = "tx-sender"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "tx-sender"
path = "main.rs"

[dependencies]
tx = { path = "../../core/core/tx" }
chain = { path = "../../core/core/chain" }
consensus = { path = "../../core/core/consensus" }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
