[package]
name = "consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "KuberCoin consensus rules and block validation"

[dependencies]
chain = { path = "../chain" }
tx = { path = "../tx" }
rayon = "1.10"
sha2.workspace = true
ripemd = "0.1"
secp256k1.workspace = true

[lints]
workspace = true
