[package]
name = "storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "KuberCoin persistent chain storage using sled"

[dependencies]
# Persistent storage backend - using sled (pure Rust) for Windows compatibility
# RocksDB requires libclang which may not be available on all platforms
sled = { version = "0.34", features = ["compression"] }
thiserror = "1.0"
parking_lot.workspace = true

[lints]
workspace = true
