[package]
name = "tx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "KuberCoin transaction types, ECDSA signatures, and P2PKH addresses"

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
hex.workspace = true
sha2.workspace = true
secp256k1.workspace = true
thiserror.workspace = true
rand.workspace = true
bs58.workspace = true
base64.workspace = true
zeroize = { version = "1.8.2", features = ["alloc", "derive"] }
ripemd = "0.1"
sha1 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
argon2 = "0.5"

[lints]
workspace = true
