[package]
name = "kubercoin-miner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "KuberCoin standalone CPU miner with getblocktemplate support"

[[bin]]
name = "kubercoin-miner"
path = "src/main.rs"

[dependencies]
chain = { path = "../../core/chain" }
consensus = { path = "../../core/consensus" }
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bincode.workspace = true
hex.workspace = true

[lints]
workspace = true
