[package]
name = "kubercoin-lightning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "KuberCoin Lightning Network implementation for instant payments"

[dependencies]
# Core crates
tx = { path = "../../core/tx" }
chain = { path = "../../core/chain" }
storage = { path = "../../core/storage" }

# Serialization – also used for channel persistence
bincode.workspace = true

# Async runtime
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Cryptography
sha2.workspace = true
secp256k1.workspace = true
hex.workspace = true
rand.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
